Refactor the mocking code for the recorder/capture service
Use the new device integration infrastructure here as well.

Change-Id: I46d338eb36650640d1ed83125ea0dbb61e119d21
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/tests/auto/unit/mockbackend/CMakeLists.txt
+++ b/tests/auto/unit/mockbackend/CMakeLists.txt
@@ -41,6 +41,10 @@ target_sources(QtMultimediaMockBackend INTERFACE
     mockvideorenderercontrol.h
     mockvideosurface.h
     mockvideowindowcontrol.h
+    qmockdevicemanager.cpp
+    qmockdevicemanager_p.h
+    qmockintegration.cpp
+    qmockintegration_p.h
 )
 # special case end
 
