Provide an Info.plist file for the camera example on macOS
This required, so that the app can actually run.

Change-Id: I967a0b5c23464cfa258f920f83d3a6775e106212
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimediawidgets/camera/CMakeLists.txt
+++ b/examples/multimediawidgets/camera/CMakeLists.txt
@@ -30,6 +30,7 @@ qt_add_executable(camera
 set_target_properties(camera PROPERTIES
     WIN32_EXECUTABLE TRUE
     MACOSX_BUNDLE TRUE
+    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.in
 )
 target_include_directories(camera PUBLIC
     ../../multimedia/shared
