Unify the media recorder controls for macOS and iOS
These days, macOS seems to have all the required functionality to
use the same code path as iOS. Since that code path is more flexible
try to use it on all platforms.
This changes the way we record audio/video to file in macOS
from using AVCaptureMovieFileOutput to using the AVAssetWriter
like in iOS.

*There are still some issues to be addressed:
- when recording audio via a bluetooth audio capture device,
the viewfinder freezes.
- a short lag when switching from viewfinder to mediarecorder
for video capturing
*Implement setting mute and volume while recording

Change-Id: I5654e117b4d9ba74b60c500ed109902e317248c4
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -421,15 +421,10 @@ qt_internal_extend_target(Multimedia CONDITION APPLE AND NOT TVOS AND NOT WATCHO
         platform/darwin/camera/avfstoragelocation.mm platform/darwin/camera/avfstoragelocation_p.h
 )
 
-qt_internal_extend_target(Multimedia CONDITION MACOS AND NOT TVOS AND NOT WATCHOS
-    SOURCES
-        platform/darwin/camera/avfmediarecordercontrol.mm platform/darwin/camera/avfmediarecordercontrol_p.h
-)
-
-qt_internal_extend_target(Multimedia CONDITION IOS AND NOT TVOS AND NOT WATCHOS
+qt_internal_extend_target(Multimedia CONDITION APPLE AND NOT TVOS AND NOT WATCHOS
     SOURCES
         platform/darwin/camera/avfmediaassetwriter.mm platform/darwin/camera/avfmediaassetwriter_p.h
-        platform/darwin/camera/avfmediarecordercontrol_ios.mm platform/darwin/camera/avfmediarecordercontrol_ios_p.h
+        platform/darwin/camera/avfmediarecordercontrol.mm platform/darwin/camera/avfmediarecordercontrol_p.h
 )
 
 qt_internal_extend_target(Multimedia CONDITION APPLE AND NOT WATCHOS AND (IOS OR TVOS)
