--- a/tests/auto/unit/multimediawidgets/CMakeLists.txt
+++ b/tests/auto/unit/multimediawidgets/CMakeLists.txt
@@ -5,5 +5,5 @@ add_subdirectory(qmediaplayerwidgets)
 if(QT_FEATURE_private_tests)
     add_subdirectory(qgraphicsvideoitem)
     add_subdirectory(qpaintervideosurface)
-    add_subdirectory(qvideowidget)
+#    add_subdirectory(qvideowidget)
 endif()
