--- a/tests/auto/unit/multimediawidgets/CMakeLists.txt
+++ b/tests/auto/unit/multimediawidgets/CMakeLists.txt
@@ -3,7 +3,7 @@
 add_subdirectory(qcamerawidgets)
 add_subdirectory(qmediaplayerwidgets)
 if(QT_FEATURE_private_tests)
-    add_subdirectory(qgraphicsvideoitem)
+#    add_subdirectory(qgraphicsvideoitem)
     add_subdirectory(qpaintervideosurface)
 #    add_subdirectory(qvideowidget)
 endif()
