Add example for listing audio and video devices and their properties
Change-Id: I718bfc799b500ca6b931f3fa237f5199c7b6badc
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimedia/CMakeLists.txt
+++ b/examples/multimedia/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Generated from multimedia.pro.
 
 add_subdirectory(audiodecoder)
+add_subdirectory(devices)
 if(TARGET Qt::Widgets)
     add_subdirectory(spectrum)
     add_subdirectory(audiorecorder)
