Get rid of one layer of indirection in the backend
QMediaPlatformPlayerInterface didn't do anything anymore but
to create a QMediaPlayerControl. So we might as well remove
that layer.

Change-Id: I1481188384d5eb25c845317835c44ec0be8c9099
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/tests/auto/unit/mockbackend/CMakeLists.txt
+++ b/tests/auto/unit/mockbackend/CMakeLists.txt
@@ -19,8 +19,7 @@ target_sources(QtMultimediaMockBackend INTERFACE
     mockcamerafocuscontrol.h
     mockcameraimagecapturecontrol.h
     mockcameraimageprocessingcontrol.h
-    mockmediaplayercontrol.h
-    mockmediaplayerservice.h
+    mockmediaplayer.h
     mockmediarecordercontrol.h
     mockmediarecorderservice.h
     mockmediastreamscontrol.h
