Set metadata when recording to the camera example
Change-Id: I5a914591f9fe9f09c04da4a1e06b29ac0d92ae00
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimediawidgets/camera/CMakeLists.txt
+++ b/examples/multimediawidgets/camera/CMakeLists.txt
@@ -26,6 +26,7 @@ qt_add_executable(camera
     imagesettings.cpp imagesettings.h imagesettings.ui
     main.cpp
     videosettings.cpp videosettings.h videosettings.ui
+    metadatadialog.cpp metadatadialog.h
 )
 set_target_properties(camera PROPERTIES
     WIN32_EXECUTABLE TRUE
