Support QCameraImageProcessing on macOS and iOS
AVFoundations' API for macOS supports only setting
the white balance mode to Qt's WhiteBalanceAuto.
For iOS, map color temperature and tint values to Qt's white
balance presets and set the white balance mode accordingly.

Change-Id: I957a01075d16f88fc6dfc5d8de1bb53b37fe420d
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -414,6 +414,7 @@ qt_internal_extend_target(Multimedia CONDITION APPLE AND NOT TVOS AND NOT WATCHO
         platform/darwin/camera/avfcameradebug_p.h
         platform/darwin/camera/avfcameraexposurecontrol.mm platform/darwin/camera/avfcameraexposurecontrol_p.h
         platform/darwin/camera/avfcamerafocuscontrol.mm platform/darwin/camera/avfcamerafocuscontrol_p.h
+        platform/darwin/camera/avfcameraimageprocessingcontrol.mm platform/darwin/camera/avfcameraimageprocessingcontrol_p.h
         platform/darwin/camera/avfcamerarenderercontrol.mm platform/darwin/camera/avfcamerarenderercontrol_p.h
         platform/darwin/camera/avfcameraservice.mm platform/darwin/camera/avfcameraservice_p.h
         platform/darwin/camera/avfcamerasession.mm platform/darwin/camera/avfcamerasession_p.h
