Cleanups in Q(Platform)MediaPlayer
QPlatformMediaPlayer now has a pointer to the public frontend
class. That way it doesn't need to inherit from QObject anymore,
and we remove all the signal forwarding code that we had in
here until now.

Also apply some build fixes for Android.

Change-Id: Iad6835a4b818c69a002c37b5f2d5aba36cbb07e2
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Doris Verria <doris.verria@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -43,7 +43,7 @@ qt_internal_add_module(Multimedia
         platform/qplatformmediaformatinfo.cpp  platform/qplatformmediaformatinfo_p.h
         platform/qplatformmediaintegration.cpp platform/qplatformmediaintegration_p.h
         platform/qplatformmediaplayer.cpp platform/qplatformmediaplayer_p.h
-        playback/qmediaplayer.cpp playback/qmediaplayer.h
+        playback/qmediaplayer.cpp playback/qmediaplayer.h playback/qmediaplayer_p.h
         playback/qmediaplaylist.cpp playback/qmediaplaylist.h playback/qmediaplaylist_p.h
         playback/qplaylistfileparser.cpp playback/qplaylistfileparser_p.h
         qmediadevicemanager.cpp qmediadevicemanager.h
