First draft API for the QMediaCaptureSession
This will become the central class to create a session for
media capture and recording.

Change-Id: Ia55aafdc95d99391e48d28674117c4b10b077eb8
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Doris Verria <doris.verria@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -55,6 +55,7 @@ qt_internal_add_module(Multimedia
         qmediatimerange.cpp qmediatimerange.h
         qmultimediautils.cpp qmultimediautils_p.h
         qtmultimediaglobal.h qtmultimediaglobal_p.h
+        recording/qmediacapturesession.cpp recording/qmediacapturesession.h
         recording/qmediaencodersettings.cpp recording/qmediaencodersettings.h
         recording/qmediarecorder.cpp recording/qmediarecorder.h recording/qmediarecorder_p.h
         video/qabstractvideobuffer.cpp video/qabstractvideobuffer_p.h
