Add new QVideoSink class
This is the starting point for the new video output
API for QtMultimedia.

Nothing working yet :)

Change-Id: Idaa98394b7c9461cfe5443fdd1566ecc9fc985cb
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -66,6 +66,7 @@ qt_internal_add_module(Multimedia
         video/qmemoryvideobuffer.cpp video/qmemoryvideobuffer_p.h
         video/qpaintervideosurface.cpp video/qpaintervideosurface_p.h
         video/qvideoframe.cpp video/qvideoframe.h
+        video/qvideosink.cpp video/qvideosink.h
         video/qvideoframeconversionhelper.cpp video/qvideoframeconversionhelper_p.h
         video/qvideooutputorientationhandler.cpp video/qvideooutputorientationhandler_p.h
         video/qvideosurfaceformat.cpp video/qvideosurfaceformat.h
