Move QPainterVideoSurface into QtMultimedia
We'll need the code there for the new QVideoSink

Change-Id: Iae4681770b2d64e1c0f1e96db2076dd4ec2315bf
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -64,6 +64,7 @@ qt_internal_add_module(Multimedia
         video/qabstractvideosurface.cpp video/qabstractvideosurface.h
         video/qimagevideobuffer.cpp video/qimagevideobuffer_p.h
         video/qmemoryvideobuffer.cpp video/qmemoryvideobuffer_p.h
+        video/qpaintervideosurface.cpp video/qpaintervideosurface_p.h
         video/qvideoframe.cpp video/qvideoframe.h
         video/qvideoframeconversionhelper.cpp video/qvideoframeconversionhelper_p.h
         video/qvideooutputorientationhandler.cpp video/qvideooutputorientationhandler_p.h
@@ -89,6 +90,11 @@ qt_internal_add_module(Multimedia
         Qt::GuiPrivate
 )
 
+# ### Get rid of me!
+qt_extend_target(Multimedia CONDITION TARGET Qt::OpenGL
+    LIBRARIES
+        Qt::OpenGL
+)
 
 qt_internal_add_simd_part(Multimedia SIMD sse2
     SOURCES
