Add support for rendering P010 and P016 formats in Quick
Those are HDR formats with 10 bit color depth. But since our
target surface has only 8 bits of color depth, we can simply
ignore the two least significant bits when rendering.

Fortunately, the format makes it rather easy to do that as it
always uses 16bits per channel.

Change-Id: I20490b4641715903797068b9af13ebbfcbea63e5
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Doris Verria <doris.verria@qt.io>

--- a/src/qtmultimediaquicktools/CMakeLists.txt
+++ b/src/qtmultimediaquicktools/CMakeLists.txt
@@ -34,6 +34,8 @@ set(qtmultimediaquicktools_resource_files
     "shaders/yuv.vert.qsb"
     "shaders/yuv_yv.frag.qsb"
     "shaders/yuyv.frag.qsb"
+    "shaders/p010le.frag.qsb"
+    "shaders/p010be.frag.qsb"
 )
 
 qt_add_resource(MultimediaQuick "qtmultimediaquicktools"
