Move the shaders from the quick tools into QtMultimedia
The shader layout is pretty generic, and QVideoSurfaceFormat
can give us both the shaders and uniform data that we need
to render the video.

All the user needs to do then is to provide geometry with a
2D texture coordinate to render the video onto any surface.

Change-Id: I95006eaf4a6f039006b8a5da0f53143da03e1ecb
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -476,3 +476,25 @@ qt_internal_add_docs(Multimedia
     doc/qtmultimedia.qdocconf
 )
 
+# Resources:
+set(qtmultimedia_resource_files
+    "shaders/bgra.frag.qsb"
+    "shaders/nv12.frag.qsb"
+    "shaders/nv21.frag.qsb"
+    "shaders/rgba.frag.qsb"
+    "shaders/rgba.vert.qsb"
+    "shaders/uyvy.frag.qsb"
+    "shaders/yuv.vert.qsb"
+    "shaders/yuv_yv.frag.qsb"
+    "shaders/yuyv.frag.qsb"
+    "shaders/p010le.frag.qsb"
+    "shaders/p010be.frag.qsb"
+)
+
+qt_add_resource(Multimedia "qtmultimedia"
+    PREFIX
+        "/qtmultimedia"
+    FILES
+        ${qtmultimedia_resource_files}
+)
+
