Remove endian specific surface formats
For 16bit data, we only support the platforms native
endianness.

Change-Id: Ic04097125622715e6847d568551d572cd317b674
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -486,6 +486,5 @@ qt_internal_add_shaders(Multimedia "shaders"
         "shaders/yuv_yv.frag"
         "shaders/yuyv.frag"
         "shaders/ayuv.frag"
-        "shaders/p010le.frag"
-        "shaders/p010be.frag"
+        "shaders/p010.frag"
 )
