Add a colorMatrix to the rgb shaders
This unifies the uniform layout for all pixel formats, and
has the advantage that we can now use the color matrix to
do brightness adjustments if required by the sink.

Fix the rgb pixel shaders and add a missing one for ABGR.

Change-Id: I545b4e0f0c067501903ee5f7af1f0f1f80b2b0bb
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -476,13 +476,14 @@ qt_internal_add_shaders(Multimedia "shaders"
     PREFIX
         "/qt-project.org/multimedia/shaders"
     FILES
+        "shaders/rgb.vert"
+        "shaders/abgr.frag"
+        "shaders/argb.frag"
         "shaders/bgra.frag"
+        "shaders/yuv.vert"
         "shaders/nv12.frag"
         "shaders/nv21.frag"
-        "shaders/rgba.frag"
-        "shaders/rgba.vert"
         "shaders/uyvy.frag"
-        "shaders/yuv.vert"
         "shaders/yuv_yv.frag"
         "shaders/yuyv.frag"
         "shaders/ayuv.frag"
