Add support for HW rendering of Y8 and Y16 video formats
Change-Id: I00f9fdcc489a18658574642df49336861aa3a14d
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -481,6 +481,7 @@ qt_internal_add_shaders(Multimedia "shaders"
         "shaders/argb.frag"
         "shaders/bgra.frag"
         "shaders/yuv.vert"
+        "shaders/y.frag"
         "shaders/nv12.frag"
         "shaders/nv21.frag"
         "shaders/uyvy.frag"
