Cleanups in the shaders
Unify the vertex shaders, we only need one for now.

Unify the P010 pixel shader with NV12, as they have the same layout.

Change-Id: I74dcd400b9219297470cbd01c0d0491933cbf25c
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -476,11 +476,10 @@ qt_internal_add_shaders(Multimedia "shaders"
     PREFIX
         "/qt-project.org/multimedia/shaders"
     FILES
-        "shaders/rgb.vert"
+        "shaders/vertex.vert"
         "shaders/abgr.frag"
         "shaders/argb.frag"
         "shaders/bgra.frag"
-        "shaders/yuv.vert"
         "shaders/y.frag"
         "shaders/nv12.frag"
         "shaders/nv21.frag"
@@ -488,5 +487,4 @@ qt_internal_add_shaders(Multimedia "shaders"
         "shaders/yuv_yv.frag"
         "shaders/yuyv.frag"
         "shaders/ayuv.frag"
-        "shaders/p010.frag"
 )
