Various fixes to the shader code
Tested all formats that could be tested through gstreamer and
ensured our shaders to the right thing.

Required adding a width uniform, so we can pick the correct
Y value for YUYV non planar formats.

The IMC formats should work, but are untested as gstreamer
does not support them.

Change-Id: Ib0fe0a7c7d97eb81a75f636c752a85f51a327183
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -483,8 +483,11 @@ qt_internal_add_shaders(Multimedia "shaders"
         "shaders/y.frag"
         "shaders/nv12.frag"
         "shaders/nv21.frag"
+        "shaders/imc2.frag"
+        "shaders/imc4.frag"
         "shaders/uyvy.frag"
-        "shaders/yuv_yv.frag"
+        "shaders/yuv_triplanar.frag"
+        "shaders/yvu_triplanar.frag"
         "shaders/yuyv.frag"
         "shaders/ayuv.frag"
 )
