Support Audio-Only recordings on macOS
Add functionality to AVFAssetWriter to capture
audio-only recordings. Change AVFCameraSession and
and AVFMediaEncoder accordingly.

Change-Id: I65afc50b524eaed82c2baa0dd99fba101a7b111b
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimedia/audiorecorder/CMakeLists.txt
+++ b/examples/multimedia/audiorecorder/CMakeLists.txt
@@ -28,6 +28,7 @@ qt_add_executable(audiorecorder
 set_target_properties(audiorecorder PROPERTIES
     WIN32_EXECUTABLE TRUE
     MACOSX_BUNDLE TRUE
+    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.in
 )
 # special case begin
 target_include_directories(audiorecorder PUBLIC
