--- a/tests/auto/unit/multimedia/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/CMakeLists.txt
@@ -13,7 +13,7 @@ add_subdirectory(qmediapluginloader)
 add_subdirectory(qmediaencoder)
 add_subdirectory(qmediatimerange)
 add_subdirectory(qvideoframe)
-add_subdirectory(qvideosurfaceformat)
+add_subdirectory(qvideoframeformat)
 add_subdirectory(qaudiobuffer)
 add_subdirectory(qaudiodecoder)
 add_subdirectory(qsamplecache)
