Rename the library for Qt Quick to multimediaquick
This fits better with our naming convention.

Change-Id: I16a430019dfc9c5431009e1be413f635bd95435a
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Doris Verria <doris.verria@qt.io>

--- a/src/multimediaquick/CMakeLists.txt
+++ b/src/multimediaquick/CMakeLists.txt
@@ -5,7 +5,7 @@
 #####################################################################
 
 qt_add_module(MultimediaQuick
-    CONFIG_MODULE_NAME qtmultimediaquicktools
+    CONFIG_MODULE_NAME multimediaquick
     INTERNAL_MODULE
     SOURCES
         qdeclarativevideooutput.cpp qdeclarativevideooutput_p.h
