Start using the new type registration scheme for QML types
For now, this is only partially used, mainly for the C++ types we
can expose directly. Some more cleanups in the qml plugin are required.

Change-Id: I05085d3622dca1b3152895e1af035fbe3549b23d
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -13,6 +13,7 @@ qt_internal_find_apple_system_framework(FWAVFoundation AVFoundation) # special c
 
 qt_internal_add_module(Multimedia
     PLUGIN_TYPES video/gstvideorenderer video/videonode
+    GENERATE_METATYPES
     SOURCES
         audio/qaudio.cpp audio/qaudio.h
         audio/qaudiobuffer.cpp audio/qaudiobuffer.h audio/qaudiobuffer_p.h
