New QML API for image capturing
Adjust the QML API for image capturing to fit with the new
handling of capture sessions. Simplify some things and
avoid using a wrapper class to the largest degree by
inheriting from QCameraImageCapture.

Remove the old image capturing code.

Change-Id: Ic99116f5202f2d0438fe0d048be2faa6687f0e4b
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimediaquick/CMakeLists.txt
+++ b/src/multimediaquick/CMakeLists.txt
@@ -10,6 +10,8 @@ qt_add_module(MultimediaQuick
     SOURCES
         qdeclarativevideooutput.cpp qdeclarativevideooutput_p.h
         qdeclarativevideooutput_render.cpp qdeclarativevideooutput_render_p.h
+        qquickimagecapture.cpp qquickimagecapture_p.h
+        qquickimagepreviewprovider.cpp qquickimagepreviewprovider_p.h
         qsgvideonode_p.cpp qsgvideonode_p.h
         qsgvideotexture.cpp qsgvideotexture_p.h
         qtmultimediaquickglobal_p.h
