Move the remaining items from the QML plugin into multimediaquick
Move the remaining code and docs from the QML plugin into
libQtMultimediaQuick, so that all QML related code is in one place.

Rename class names and files from qdeclarative* to qquick*.

Change-Id: I159b9ddc6bfc113da62b5906596d82fac168ed84
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimediaquick/CMakeLists.txt
+++ b/src/multimediaquick/CMakeLists.txt
@@ -8,10 +8,11 @@ qt_add_module(MultimediaQuick
     CONFIG_MODULE_NAME multimediaquick
     INTERNAL_MODULE
     SOURCES
-        qdeclarativevideooutput.cpp qdeclarativevideooutput_p.h
-        qdeclarativevideooutput_render.cpp qdeclarativevideooutput_render_p.h
         qquickimagecapture.cpp qquickimagecapture_p.h
         qquickimagepreviewprovider.cpp qquickimagepreviewprovider_p.h
+        qquickplaylist.cpp qquickplaylist_p.h
+        qquickvideooutput.cpp qquickvideooutput_p.h
+        qquickvideooutput_render.cpp qquickvideooutput_render_p.h
         qsgvideonode_p.cpp qsgvideonode_p.h
         qsgvideotexture.cpp qsgvideotexture_p.h
         qtmultimediaquickglobal_p.h
