--- a/tests/auto/integration/CMakeLists.txt
+++ b/tests/auto/integration/CMakeLists.txt
@@ -11,7 +11,7 @@ if(TARGET Qt::Widgets)
     add_subdirectory(qcamerabackend)
 endif()
 if(TARGET Qt::Quick)
-    add_subdirectory(qdeclarativevideooutput)
-    add_subdirectory(qdeclarativevideooutput_window)
+    add_subdirectory(qquickvideooutput)
+    add_subdirectory(qquickvideooutput_window)
 endif()
 # special case end
