Some smaller fixes for declarative-camera
Add Info.plist template to get camera permissions on macOS
Fix camera selection if you have more than one camera
Avoid some warnings about non notifiable properties

Change-Id: I30e2802053019bb91e6650c9162601aad25bb74d
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimedia/declarative-camera/CMakeLists.txt
+++ b/examples/multimedia/declarative-camera/CMakeLists.txt
@@ -27,6 +27,7 @@ qt_add_executable(declarative-camera
 set_target_properties(declarative-camera PROPERTIES
     WIN32_EXECUTABLE TRUE
     MACOSX_BUNDLE TRUE
+    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.in
 )
 # special case begin
 target_include_directories(declarative-camera PUBLIC
@@ -40,7 +41,6 @@ target_link_libraries(declarative-camera PUBLIC
     Qt::Qml
     Qt::Quick
 )
-
 
 # Resources:
 set(declarative-camera_resource_files
