Fix camera permissions on macOS
Change-Id: I0b869bb3db48b16588179ec643999de6885b1d6a
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimedia/video/qmlvideo/CMakeLists.txt
+++ b/examples/multimedia/video/qmlvideo/CMakeLists.txt
@@ -32,6 +32,7 @@ qt_add_executable(qmlvideo
 set_target_properties(qmlvideo PROPERTIES
     WIN32_EXECUTABLE TRUE
     MACOSX_BUNDLE TRUE
+    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.in
 )
 target_include_directories(qmlvideo PUBLIC
     ../snippets/frequencymonitor
