Clean up the file and class names for the mock backend
Change-Id: I3750bdb99503a425757f149963370ae4100a011b
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: André de la Rocha <andre.rocha@qt.io>

--- a/tests/auto/unit/mockbackend/CMakeLists.txt
+++ b/tests/auto/unit/mockbackend/CMakeLists.txt
@@ -13,15 +13,15 @@ target_link_libraries(QtMultimediaMockBackend INTERFACE
     Qt::MultimediaPrivate
 )
 target_sources(QtMultimediaMockBackend INTERFACE
-    mockaudiodecodercontrol.h
-    mockcameracontrol.h
-    mockcameraexposurecontrol.h
-    mockcamerafocuscontrol.h
-    mockcameraimagecapturecontrol.h
-    mockcameraimageprocessingcontrol.h
-    mockmediaplayer.h
-    mockmediarecordercontrol.h
-    mockmediarecorderservice.h
+    qmockaudiodecoder.h
+    qmockcamera.h
+    qmockcameraexposure.h
+    qmockcamerafocus.h
+    qmockcameraimageprocessing.h
+    qmockimagecapture.h
+    qmockmediaplayer.h
+    qmockmediaencoder.h
+    qmockmediacapturesession.h
     qmockdevicemanager.cpp
     qmockdevicemanager_p.h
     qmockintegration.cpp
