--- a/tests/auto/unit/multimediawidgets/CMakeLists.txt
+++ b/tests/auto/unit/multimediawidgets/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 add_subdirectory(qcamerawidgets)
 add_subdirectory(qmediaplayerwidgets)
+add_subdirectory(qvideowidget)
 if(QT_FEATURE_private_tests)
 #    add_subdirectory(qgraphicsvideoitem)
 #    add_subdirectory(qvideowidget)
