Re-enable the graphicsvideoitem autotest
Still has a couple of test failures, but at least the test
compiles again.

Change-Id: I74b7a50ee316885a05d65f638e6b782f47a2fc51
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Doris Verria <doris.verria@qt.io>

--- a/tests/auto/unit/multimediawidgets/qgraphicsvideoitem/CMakeLists.txt
+++ b/tests/auto/unit/multimediawidgets/qgraphicsvideoitem/CMakeLists.txt
@@ -7,9 +7,12 @@
 qt_add_test(tst_qgraphicsvideoitem
     SOURCES
         tst_qgraphicsvideoitem.cpp
+    INCLUDE_DIRECTORIES
+        ../../mockbackend
     PUBLIC_LIBRARIES
         Qt::Gui
         Qt::MultimediaPrivate
         Qt::MultimediaWidgetsPrivate
         Qt::Widgets
+        QtMultimediaMockBackend
 )
